# developer-productivity

./: '  README.md  package-lock.json  package.json  vite.config.ts.timestamp-1692554210821-f85efa4f90fab.mjs
src/: App.tsx  error-page.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  output.json  tauri.conf.json
src-tauri/src/: bash_command.rs  clipboard.rs  clipper.rs  filesave.rs  main.rs  mister_clipper.rs  scripts.rs  test_module.rs
src-tauri/src/clipboard_manager/: mod.rs
src-tauri/src/database-repository/: traits.rs
src-tauri/src/generators/: uuid.rs
src-tauri/src/storage/: README.md  mod.rs  traits.rs
src/components/: bash-command-input.tsx  global-copy-listener.tsx  single-input.tsx
src/components/buttons/: Starbutton.tsx
src/components/clipboard/: BookmarkClipboard.tsx  ClipboardItemButton.tsx  ClipboardTab.tsx  ContextModal.tsx  CurrentClipboard.tsx  clipboard-main.tsx
src/components/tabs/: Tab.tsx  TabTitle.tsx  Tabs.tsx
src/components/utility/: divider.tsx  wrapper.tsx
src/components/uuid/: uuid.tsx
src/components/wrappers/: button.tsx  column.tsx  row.tsx
